feat(stats) : add funny stat categories and per-category leaderboards replace hardcoded stat fields with a 37-entry category registry  split /stats into explicit player and category subcommands