@@ -18,52 +18,212 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.text.NumberFormat;
 import java.time.Instant;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Stream;
 
 /**
- * Collects and formats player statistics and achievements from server files and active sessions.
+ * Collects and formats player statistics from the world save.
+ *
+ * <p>Every statistic is described by a {@link StatCategory} in
+ * {@link StatCategories}; this class only knows how to read files, apply those
+ * categories, and render the results. Both the Discord embeds and the in-game
+ * tables go through here so the two can never disagree.</p>
+ *
+ * <p>Results are cached for {@value #CACHE_TTL_MS} ms because a full collection
+ * parses every recorded player's JSON. Call {@link #invalidate()} after anything
+ * that writes stats to disk.</p>
  */
 public final class PlayerStatsService
 {
     private static final Logger LOGGER = LogUtils.getLogger();
 
-    public static class PlayerStatsRecord
+    private static final long CACHE_TTL_MS = 30_000L;
+    /** Discord rejects embeds with more than 25 fields. */
+    private static final int MAX_EMBED_FIELDS = 25;
+    private static final int MAX_LEADERBOARD_ROWS = 15;
+    private static final String KILLED_BY = "minecraft:killed_by";
+
+    private static final int COLOUR_LEADERBOARD = 0xF1C40F;
+    private static final int COLOUR_ONLINE = 0x2ECC71;
+    private static final int COLOUR_OFFLINE = 0x95A5A6;
+    private static final int COLOUR_ERROR = 0xED4245;
+
+    private static volatile Snapshot snapshot;
+
+    /**
+     * One player's statistics, keyed by {@link StatCategory#id()}.
+     */
+    public static final class PlayerStatsRecord
     {
         public UUID uuid;
         public String name;
-        public long mobKills = 0;
-        public long blocksMined = 0;
-        public long playTimeTicks = 0;
-        public long blocksWalked = 0;
-        public int achievements = 0;
+        /** Most frequent entry in {@code minecraft:killed_by}, or null. */
+        public String nemesis;
+
+        private final Map<String, Long> values = new HashMap<>();
+
+        public long value(final String categoryId)
+        {
+            if (categoryId == null)
+            {
+                return 0L;
+            }
+            final Long stored = values.get(categoryId);
+            return stored == null ? 0L : stored;
+        }
+
+        void put(final String categoryId, final long value)
+        {
+            if (categoryId != null)
+            {
+                values.put(categoryId, value);
+            }
+        }
+
+        Map<String, Long> rawValues()
+        {
+            return values;
+        }
+
+        public long mobKills()
+        {
+            return value("mob_kills");
+        }
+
+        public long blocksMined()
+        {
+            return value("blocks_mined");
+        }
+
+        public long playTimeTicks()
+        {
+            return value("play_time");
+        }
+
+        /** @return distance walked in blocks, not the stored centimetres */
+        public long blocksWalked()
+        {
+            return value("blocks_walked") / 100L;
+        }
+
+        public int achievements()
+        {
+            return (int) value("advancements");
+        }
+    }
+
+    private record Snapshot(Map<UUID, PlayerStatsRecord> records, Set<String> active, long takenAt)
+    {
     }
 
     private PlayerStatsService()
     {
     }
 
+    /* ------------------------------------------------------------------ */
+    /* Collection and caching.                                             */
+    /* ------------------------------------------------------------------ */
+
     /**
      * Reads every recorded player's statistics from the world save.
-     *
-     * <p>Shared by the Discord embeds and the in-game {@code /stats} table so
-     * the two can never disagree.</p>
      *
      * @return a map keyed by player UUID, empty if the stats directory is missing
      */
     public static Map<UUID, PlayerStatsRecord> collectAllStats(final MinecraftServer server)
     {
+        return snapshot(server).records();
+    }
+
+    /**
+     * Drops the cached snapshot. Call this after stats are flushed to disk or a
+     * player disconnects, so the next query sees fresh numbers.
+     */
+    public static void invalidate()
+    {
+        snapshot = null;
+    }
+
+    /**
+     * @return the ids of categories at least one player has a non-zero value for
+     */
+    public static Set<String> activeCategoryIds(final MinecraftServer server)
+    {
+        return snapshot(server).active();
+    }
+
+    /**
+     * Cheap variant for callers that must not touch disk, such as the Discord
+     * autocomplete handler running on a gateway thread.
+     *
+     * @return the cached active set, or every known id if nothing is cached yet
+     */
+    public static Set<String> suggestibleCategoryIds()
+    {
+        final Snapshot current = snapshot;
+        if (current != null && !current.active().isEmpty())
+        {
+            return current.active();
+        }
+        final Set<String> ids = new LinkedHashSet<>();
+        for (final StatCategory category : StatCategories.all())
+        {
+            ids.add(category.id());
+        }
+        return Collections.unmodifiableSet(ids);
+    }
+
+    private static Snapshot snapshot(final MinecraftServer server)
+    {
         if (server == null)
         {
-            return Collections.emptyMap();
+            return new Snapshot(Map.of(), Set.of(), System.currentTimeMillis());
         }
-        return loadAllPlayerStats(server);
+        final long now = System.currentTimeMillis();
+        final Snapshot current = snapshot;
+        if (current != null && now - current.takenAt() < CACHE_TTL_MS)
+        {
+            return current;
+        }
+        final Map<UUID, PlayerStatsRecord> loaded = loadAllPlayerStats(server);
+        final Snapshot fresh = new Snapshot(
+                Collections.unmodifiableMap(loaded),
+                computeActive(loaded.values()),
+                now);
+        snapshot = fresh;
+        return fresh;
+    }
+
+    private static Set<String> computeActive(final Iterable<PlayerStatsRecord> records)
+    {
+        final Set<String> active = new LinkedHashSet<>();
+        for (final StatCategory category : StatCategories.all())
+        {
+            for (final PlayerStatsRecord record : records)
+            {
+                if (record.value(category.id()) != 0L)
+                {
+                    active.add(category.id());
+                    break;
+                }
+            }
+        }
+        return Collections.unmodifiableSet(active);
     }
 
     /**
      * Resolves a player by name and reads their statistics.
      *
-     * @return the record, or null if the name could not be resolved to a known player
+     * @return the record, or null if the name is not a known player
      */
     public static PlayerStatsRecord collectStatsFor(final MinecraftServer server, final String targetName)
     {
@@ -84,96 +244,141 @@ public final class PlayerStatsService
     }
 
     /**
-     * Builds a Discord embed displaying the server-wide leaderboards and current online player health/EXP.
+     * Ranks players by one category, highest first.
+     *
+     * <p>Zero-scoring players are dropped: a leaderboard padded with forty ties
+     * on nothing is noise.</p>
+     *
+     * @param limit the maximum number of rows, clamped to at least 1
+     */
+    public static List<PlayerStatsRecord> topFor(final MinecraftServer server, final StatCategory category,
+                                                 final int limit)
+    {
+        if (server == null || category == null)
+        {
+            return List.of();
+        }
+        final int cap = Math.max(1, limit);
+        final List<PlayerStatsRecord> ranked = new ArrayList<>();
+        for (final PlayerStatsRecord record : collectAllStats(server).values())
+        {
+            if (record.value(category.id()) > 0L && record.name != null && !record.name.isBlank())
+            {
+                ranked.add(record);
+            }
+        }
+        ranked.sort(Comparator.comparingLong((PlayerStatsRecord r) -> r.value(category.id())).reversed()
+                .thenComparing(r -> r.name, String.CASE_INSENSITIVE_ORDER));
+        return ranked.size() <= cap ? ranked : new ArrayList<>(ranked.subList(0, cap));
+    }
+
+    /* ------------------------------------------------------------------ */
+    /* Discord embeds.                                                     */
+    /* ------------------------------------------------------------------ */
+
+    /**
+     * The overview: the leader in each headline category, plus live online status.
      */
     public static MessageEmbed buildLeaderboardsEmbed(final MinecraftServer server)
     {
-        final Map<UUID, PlayerStatsRecord> allStats = collectAllStats(server);
-        final List<ServerPlayer> onlinePlayers = server.getPlayerList().getPlayers();
-
         final EmbedBuilder embed = new EmbedBuilder();
-        embed.setTitle("\uD83D\uDCCA Minecraft Server Statistics & Leaderboards");
-        embed.setColor(0xF1C40F); // Gold
+        embed.setTitle("\uD83D\uDCCA Server Statistics");
+        embed.setColor(COLOUR_LEADERBOARD);
         embed.setTimestamp(Instant.now());
 
-        if (allStats.isEmpty() && onlinePlayers.isEmpty())
+        if (server == null)
+        {
+            embed.setColor(COLOUR_ERROR);
+            embed.setDescription("Server is not available.");
+            return embed.build();
+        }
+
+        final Map<UUID, PlayerStatsRecord> allStats = collectAllStats(server);
+        final Set<String> active = activeCategoryIds(server);
+        final List<ServerPlayer> onlinePlayers = server.getPlayerList().getPlayers();
+
+        if (allStats.isEmpty())
         {
             embed.setDescription("No player statistics recorded on this server yet.");
             return embed.build();
         }
 
-        // Determine leaders
-        final PlayerStatsRecord topKills = allStats.values().stream()
-                .max(Comparator.comparingLong(p -> p.mobKills)).orElse(null);
-        final PlayerStatsRecord topMined = allStats.values().stream()
-                .max(Comparator.comparingLong(p -> p.blocksMined)).orElse(null);
-        final PlayerStatsRecord topTime = allStats.values().stream()
-                .max(Comparator.comparingLong(p -> p.playTimeTicks)).orElse(null);
-        final PlayerStatsRecord topWalked = allStats.values().stream()
-                .max(Comparator.comparingLong(p -> p.blocksWalked)).orElse(null);
-        final PlayerStatsRecord topAchievements = allStats.values().stream()
-                .max(Comparator.comparingInt(p -> p.achievements)).orElse(null);
-
-        final NumberFormat fmt = NumberFormat.getNumberInstance(Locale.US);
-
-        embed.addField("\u2694\uFE0F Most Mobs Killed",
-                formatLeader(topKills, topKills != null ? fmt.format(topKills.mobKills) + " mobs" : "0"), true);
-
-        embed.addField("\u26CF\uFE0F Most Blocks Mined",
-                formatLeader(topMined, topMined != null ? fmt.format(topMined.blocksMined) + " blocks" : "0"), true);
-
-        embed.addField("\u23F1\uFE0F Most Time Played",
-                formatLeader(topTime, topTime != null ? formatPlayTime(topTime.playTimeTicks) : "0m"), true);
-
-        embed.addField("\uD83C\uDFC3 Most Blocks Walked",
-                formatLeader(topWalked, topWalked != null ? formatBlocks(topWalked.blocksWalked) : "0 blocks"), true);
-
-        embed.addField("\uD83C\uDFC6 Most Achievements",
-                formatLeader(topAchievements, topAchievements != null ? topAchievements.achievements + " completed" : "0"), true);
-
-        // Highest Level currently
-        final ServerPlayer highestLevelOnline = onlinePlayers.stream()
-                .max(Comparator.comparingInt(p -> p.experienceLevel)).orElse(null);
-        if (highestLevelOnline != null)
+        int fields = 0;
+        for (final StatCategory category : StatCategories.overview())
         {
-            embed.addField("\uD83C\uDF1F Highest Current Level",
-                    "**" + highestLevelOnline.getGameProfile().getName() + "** \u2014 Level "
-                            + highestLevelOnline.experienceLevel + " (" + fmt.format(highestLevelOnline.totalExperience) + " XP)", true);
-        }
-        else
-        {
-            embed.addField("\uD83C\uDF1F Highest Current Level", "*No players online to query live EXP*", true);
-        }
-
-        // Online player health and EXP status
-        final StringBuilder onlineStatus = new StringBuilder();
-        if (onlinePlayers.isEmpty())
-        {
-            onlineStatus.append("*No players currently online.*");
-        }
-        else
-        {
-            for (final ServerPlayer p : onlinePlayers)
+            if (fields >= MAX_EMBED_FIELDS - 1 || !active.contains(category.id()))
             {
-                final String name = p.getGameProfile().getName();
-                final float hp = p.getHealth();
-                final float maxHp = p.getMaxHealth();
-                final int level = p.experienceLevel;
-                final int totalXp = p.totalExperience;
-                onlineStatus.append(String.format("\u2022 **%s**: %.1f/%.1f HP \u2764\uFE0F | Level %d (%s XP)\n",
-                        name, hp, maxHp, level, fmt.format(totalXp)));
+                continue;
             }
+            final PlayerStatsRecord leader = leaderOf(allStats.values(), category);
+            if (leader == null)
+            {
+                continue;
+            }
+            embed.addField(category.heading(),
+                    "**" + leader.name + "** \u2014 " + category.display(leader.value(category.id())),
+                    true);
+            fields++;
         }
 
-        embed.addField("\u2764\uFE0F Online Players Status (" + onlinePlayers.size() + "/"
-                + server.getPlayerList().getMaxPlayers() + ")", onlineStatus.toString(), false);
+        if (fields == 0)
+        {
+            embed.setDescription("No player statistics recorded on this server yet.");
+            return embed.build();
+        }
 
-        embed.setFooter("Tip: Use /stats player:<name> for individual stats \u2022 Lifetime EXP is not tracked across deaths in vanilla");
+        embed.addField("\u2764\uFE0F Online (" + onlinePlayers.size() + "/"
+                + server.getPlayerList().getMaxPlayers() + ")", onlineSummary(onlinePlayers), false);
+        embed.setFooter("Use /stats category name:<category> for a full leaderboard, or /stats player name:<player>");
         return embed.build();
     }
 
     /**
-     * Builds a Discord embed displaying statistics for a specific player.
+     * The full ranked leaderboard for one category.
+     */
+    public static MessageEmbed buildCategoryLeaderboardEmbed(final MinecraftServer server, final StatCategory category)
+    {
+        final EmbedBuilder embed = new EmbedBuilder();
+        embed.setColor(COLOUR_LEADERBOARD);
+        embed.setTimestamp(Instant.now());
+
+        if (server == null || category == null)
+        {
+            embed.setTitle("Leaderboard");
+            embed.setColor(COLOUR_ERROR);
+            embed.setDescription("Server is not available.");
+            return embed.build();
+        }
+
+        embed.setTitle(category.heading() + " \u2014 Leaderboard");
+
+        final List<PlayerStatsRecord> top = topFor(server, category, MAX_LEADERBOARD_ROWS);
+        if (top.isEmpty())
+        {
+            embed.setColor(COLOUR_OFFLINE);
+            embed.setDescription("Nobody has recorded anything for this statistic yet.");
+            embed.setFooter("Category: " + category.id());
+            return embed.build();
+        }
+
+        final StringBuilder body = new StringBuilder(256);
+        for (int i = 0; i < top.size(); i++)
+        {
+            final PlayerStatsRecord record = top.get(i);
+            body.append(medal(i))
+                    .append(" **").append(record.name).append("** \u2014 ")
+                    .append(category.display(record.value(category.id())))
+                    .append('\n');
+        }
+
+        embed.setDescription(body.toString());
+        embed.setThumbnail("https://mc-heads.net/head/" + top.get(0).name);
+        embed.setFooter("Category: " + category.id() + " \u2022 showing top " + top.size());
+        return embed.build();
+    }
+
+    /**
+     * One player's full card: every statistic they have a non-zero value for.
      */
     public static MessageEmbed buildPlayerStatsEmbed(final MinecraftServer server, final String targetName)
     {
@@ -182,56 +387,116 @@ public final class PlayerStatsService
         {
             final EmbedBuilder notFound = new EmbedBuilder();
             notFound.setTitle("Player Not Found");
-            notFound.setColor(0xED4245); // Red
+            notFound.setColor(COLOUR_ERROR);
             notFound.setDescription("No statistics or player record found for **" + targetName + "**.\n"
                     + "Make sure the name is spelled correctly and the player has joined this server before.");
             return notFound.build();
         }
 
-        final String resolvedName = record.name;
-
-        final ServerPlayer onlinePlayer = server.getPlayerList().getPlayer(record.uuid);
-        final boolean isOnline = onlinePlayer != null;
+        final ServerPlayer online = server.getPlayerList().getPlayer(record.uuid);
+        final boolean isOnline = online != null;
         final NumberFormat fmt = NumberFormat.getNumberInstance(Locale.US);
 
         final EmbedBuilder embed = new EmbedBuilder();
-        embed.setTitle("\uD83D\uDCCA Player Statistics: " + resolvedName);
-        embed.setThumbnail("https://mc-heads.net/head/" + resolvedName);
-        embed.setColor(isOnline ? 0x2ECC71 : 0x95A5A6); // Green if online, Gray if offline
+        embed.setTitle("\uD83D\uDCCA Player Statistics: " + record.name);
+        embed.setThumbnail("https://mc-heads.net/head/" + record.name);
+        embed.setColor(isOnline ? COLOUR_ONLINE : COLOUR_OFFLINE);
         embed.setTimestamp(Instant.now());
 
+        int fields = 0;
         embed.addField("Status", isOnline ? "\uD83D\uDFE2 Online" : "\u26AA Offline", true);
+        fields++;
 
         if (isOnline)
         {
             embed.addField("Current Health",
-                    String.format("%.1f / %.1f HP \u2764\uFE0F", onlinePlayer.getHealth(), onlinePlayer.getMaxHealth()), true);
+                    String.format(Locale.US, "%.1f / %.1f HP", online.getHealth(), online.getMaxHealth()), true);
             embed.addField("Current Experience",
-                    "Level " + onlinePlayer.experienceLevel + " (" + fmt.format(onlinePlayer.totalExperience) + " XP)", true);
+                    "Level " + online.experienceLevel + " (" + fmt.format(online.totalExperience) + " XP)", true);
+            fields += 2;
         }
 
-        embed.addField("\u23F1\uFE0F Time Played", formatPlayTime(record.playTimeTicks), true);
-        embed.addField("\u2694\uFE0F Mobs Killed", fmt.format(record.mobKills), true);
-        embed.addField("\u26CF\uFE0F Blocks Mined", fmt.format(record.blocksMined), true);
-        embed.addField("\uD83C\uDFC3 Blocks Walked", formatBlocks(record.blocksWalked), true);
-        embed.addField("\uD83C\uDFC6 Achievements Completed", record.achievements + " completed", true);
+        if (record.nemesis != null && !record.nemesis.isBlank())
+        {
+            embed.addField("\uD83E\uDD4A Nemesis", record.nemesis, true);
+            fields++;
+        }
+
+        for (final StatCategory category : StatCategories.all())
+        {
+            if (fields >= MAX_EMBED_FIELDS)
+            {
+                break;
+            }
+            final long value = record.value(category.id());
+            if (value == 0L)
+            {
+                continue;
+            }
+            embed.addField(category.heading(), category.display(value), true);
+            fields++;
+        }
 
         embed.setFooter(isOnline ? "Player is currently in-game" : "Stats loaded from player records");
         return embed.build();
     }
 
-    private static String formatLeader(final PlayerStatsRecord leader, final String statFormatted)
+    private static PlayerStatsRecord leaderOf(final Iterable<PlayerStatsRecord> records, final StatCategory category)
     {
-        if (leader == null || leader.name == null)
+        PlayerStatsRecord best = null;
+        for (final PlayerStatsRecord record : records)
         {
-            return "*None*";
+            if (record.name == null || record.name.isBlank() || record.value(category.id()) <= 0L)
+            {
+                continue;
+            }
+            if (best == null || record.value(category.id()) > best.value(category.id()))
+            {
+                best = record;
+            }
         }
-        return "**" + leader.name + "** \u2014 " + statFormatted;
+        return best;
     }
+
+    private static String onlineSummary(final List<ServerPlayer> onlinePlayers)
+    {
+        if (onlinePlayers.isEmpty())
+        {
+            return "*No players currently online.*";
+        }
+        final NumberFormat fmt = NumberFormat.getNumberInstance(Locale.US);
+        final StringBuilder out = new StringBuilder(128);
+        for (final ServerPlayer player : onlinePlayers)
+        {
+            out.append(String.format(Locale.US, "\u2022 **%s**: %.1f/%.1f HP | Level %d (%s XP)\n",
+                    player.getGameProfile().getName(), player.getHealth(), player.getMaxHealth(),
+                    player.experienceLevel, fmt.format(player.totalExperience)));
+        }
+        return out.toString();
+    }
+
+    private static String medal(final int index)
+    {
+        switch (index)
+        {
+            case 0:
+                return "\uD83E\uDD47";
+            case 1:
+                return "\uD83E\uDD48";
+            case 2:
+                return "\uD83E\uDD49";
+            default:
+                return "`#" + (index + 1) + "`";
+        }
+    }
+
+    /* ------------------------------------------------------------------ */
+    /* Formatting helpers, shared with the in-game tables.                 */
+    /* ------------------------------------------------------------------ */
 
     public static String formatPlayTime(final long ticks)
     {
-        final long seconds = ticks / 20;
+        final long seconds = Math.max(0L, ticks) / 20L;
         final long days = seconds / 86400;
         final long hours = (seconds % 86400) / 3600;
         final long minutes = (seconds % 3600) / 60;
@@ -251,10 +516,14 @@ public final class PlayerStatsService
         final NumberFormat fmt = NumberFormat.getNumberInstance(Locale.US);
         if (blocks >= 1000)
         {
-            return fmt.format(blocks) + " blocks (" + String.format("%.1f km", blocks / 1000.0) + ")";
+            return fmt.format(blocks) + " blocks (" + String.format(Locale.US, "%.1f km", blocks / 1000.0) + ")";
         }
         return fmt.format(blocks) + " blocks";
     }
+
+    /* ------------------------------------------------------------------ */
+    /* File loading.                                                       */
+    /* ------------------------------------------------------------------ */
 
     private static Map<UUID, PlayerStatsRecord> loadAllPlayerStats(final MinecraftServer server)
     {
@@ -272,21 +541,13 @@ public final class PlayerStatsService
             final List<Path> files = stream.filter(p -> p.getFileName().toString().endsWith(".json")).toList();
             for (final Path path : files)
             {
-                final String fileName = path.getFileName().toString();
-                final String uuidStr = fileName.substring(0, fileName.length() - 5);
-                final UUID uuid;
-                try
-                {
-                    uuid = UUID.fromString(uuidStr);
-                }
-                catch (final IllegalArgumentException e)
+                final UUID uuid = uuidFromFileName(path.getFileName().toString());
+                if (uuid == null)
                 {
                     continue;
                 }
-
                 final String name = resolvePlayerName(server, uuid, null);
-                final PlayerStatsRecord record = loadSingleStats(statsDir, advDir, uuid, name);
-                map.put(uuid, record);
+                map.put(uuid, loadSingleStats(statsDir, advDir, uuid, name));
             }
         }
         catch (final Exception e)
@@ -297,67 +558,155 @@ public final class PlayerStatsService
         return map;
     }
 
-    private static PlayerStatsRecord loadSingleStats(final Path statsDir, final Path advDir, final UUID uuid, final String name)
+    private static UUID uuidFromFileName(final String fileName)
+    {
+        if (fileName == null || fileName.length() <= 5)
+        {
+            return null;
+        }
+        try
+        {
+            return UUID.fromString(fileName.substring(0, fileName.length() - 5));
+        }
+        catch (final IllegalArgumentException e)
+        {
+            return null;
+        }
+    }
+
+    /**
+     * Parses one player's stats file once, then applies every registered category.
+     */
+    private static PlayerStatsRecord loadSingleStats(final Path statsDir, final Path advDir,
+                                                     final UUID uuid, final String name)
     {
         final PlayerStatsRecord record = new PlayerStatsRecord();
         record.uuid = uuid;
         record.name = name;
 
-        final Path statsFile = statsDir.resolve(uuid.toString() + ".json");
-        if (Files.exists(statsFile))
+        final JsonObject stats = readStatsObject(statsDir.resolve(uuid.toString() + ".json"), uuid);
+        if (stats != null)
         {
-            try (BufferedReader reader = Files.newBufferedReader(statsFile, StandardCharsets.UTF_8))
-            {
-                final JsonElement root = JsonParser.parseReader(reader);
-                if (root.isJsonObject())
-                {
-                    final JsonObject rootObj = root.getAsJsonObject();
-                    if (rootObj.has("stats") && rootObj.get("stats").isJsonObject())
-                    {
-                        final JsonObject stats = rootObj.getAsJsonObject("stats");
-                        // Custom stats
-                        if (stats.has("minecraft:custom") && stats.get("minecraft:custom").isJsonObject())
-                        {
-                            final JsonObject custom = stats.getAsJsonObject("minecraft:custom");
-                            if (custom.has("minecraft:mob_kills"))
-                            {
-                                record.mobKills = custom.get("minecraft:mob_kills").getAsLong();
-                            }
-                            if (custom.has("minecraft:play_time"))
-                            {
-                                record.playTimeTicks = custom.get("minecraft:play_time").getAsLong();
-                            }
-                            final long walk = custom.has("minecraft:walk_one_cm") ? custom.get("minecraft:walk_one_cm").getAsLong() : 0;
-                            final long sprint = custom.has("minecraft:sprint_one_cm") ? custom.get("minecraft:sprint_one_cm").getAsLong() : 0;
-                            final long crouch = custom.has("minecraft:crouch_one_cm") ? custom.get("minecraft:crouch_one_cm").getAsLong() : 0;
-                            record.blocksWalked = (walk + sprint + crouch) / 100;
-                        }
-
-                        // Mined blocks
-                        if (stats.has("minecraft:mined") && stats.get("minecraft:mined").isJsonObject())
-                        {
-                            final JsonObject mined = stats.getAsJsonObject("minecraft:mined");
-                            long totalMined = 0;
-                            for (final Map.Entry<String, JsonElement> entry : mined.entrySet())
-                            {
-                                if (entry.getValue().isJsonPrimitive())
-                                {
-                                    totalMined += entry.getValue().getAsLong();
-                                }
-                            }
-                            record.blocksMined = totalMined;
-                        }
-                    }
-                }
-            }
-            catch (final Exception e)
-            {
-                LOGGER.warn("Could not read stats for {}: {}", uuid, e.getMessage());
-            }
+            applyDirectSources(record, stats, uuid);
+            record.nemesis = findNemesis(stats);
         }
 
-        record.achievements = countAdvancements(advDir, uuid);
+        // Advancements live in a separate directory, so they are filled in here
+        // rather than through a StatSource.
+        record.put("advancements", countAdvancements(advDir, uuid));
+
+        applyDerivedSources(record, uuid);
         return record;
+    }
+
+    private static void applyDirectSources(final PlayerStatsRecord record, final JsonObject stats, final UUID uuid)
+    {
+        for (final StatCategory category : StatCategories.all())
+        {
+            if (category.source() == null)
+            {
+                continue;
+            }
+            try
+            {
+                record.put(category.id(), category.source().read(stats));
+            }
+            catch (final RuntimeException e)
+            {
+                // One bad category must not void the whole record.
+                LOGGER.warn("Could not read stat '{}' for {}: {}", category.id(), uuid, e.getMessage());
+            }
+        }
+    }
+
+    private static void applyDerivedSources(final PlayerStatsRecord record, final UUID uuid)
+    {
+        for (final StatCategory category : StatCategories.all())
+        {
+            if (!category.isDerived())
+            {
+                continue;
+            }
+            try
+            {
+                record.put(category.id(), category.derived().compute(record.rawValues()));
+            }
+            catch (final RuntimeException e)
+            {
+                LOGGER.warn("Could not derive stat '{}' for {}: {}", category.id(), uuid, e.getMessage());
+            }
+        }
+    }
+
+    private static JsonObject readStatsObject(final Path statsFile, final UUID uuid)
+    {
+        if (!Files.exists(statsFile))
+        {
+            return null;
+        }
+        try (BufferedReader reader = Files.newBufferedReader(statsFile, StandardCharsets.UTF_8))
+        {
+            final JsonElement root = JsonParser.parseReader(reader);
+            if (!root.isJsonObject())
+            {
+                return null;
+            }
+            return StatCategory.child(root.getAsJsonObject(), "stats");
+        }
+        catch (final Exception e)
+        {
+            LOGGER.warn("Could not read stats for {}: {}", uuid, e.getMessage());
+            return null;
+        }
+    }
+
+    /**
+     * @return the prettified name of whatever has killed this player most often
+     */
+    private static String findNemesis(final JsonObject stats)
+    {
+        final JsonObject killedBy = StatCategory.child(stats, KILLED_BY);
+        if (killedBy == null)
+        {
+            return null;
+        }
+        String bestKey = null;
+        long bestValue = 0L;
+        for (final Map.Entry<String, JsonElement> entry : killedBy.entrySet())
+        {
+            final long value = StatCategory.readLong(killedBy, entry.getKey());
+            if (value > bestValue)
+            {
+                bestValue = value;
+                bestKey = entry.getKey();
+            }
+        }
+        if (bestKey == null)
+        {
+            return null;
+        }
+        return prettifyEntityId(bestKey) + " (\u00D7" + bestValue + ")";
+    }
+
+    private static String prettifyEntityId(final String id)
+    {
+        final int colon = id.indexOf(':');
+        final String bare = colon >= 0 ? id.substring(colon + 1) : id;
+        final String[] parts = bare.split("_");
+        final StringBuilder out = new StringBuilder(bare.length());
+        for (final String part : parts)
+        {
+            if (part.isEmpty())
+            {
+                continue;
+            }
+            if (out.length() > 0)
+            {
+                out.append(' ');
+            }
+            out.append(Character.toUpperCase(part.charAt(0))).append(part.substring(1));
+        }
+        return out.length() == 0 ? bare : out.toString();
     }
 
     private static int countAdvancements(final Path advDir, final UUID uuid)
@@ -375,8 +724,7 @@ public final class PlayerStatsService
                 return 0;
             }
             int count = 0;
-            final JsonObject obj = root.getAsJsonObject();
-            for (final Map.Entry<String, JsonElement> entry : obj.entrySet())
+            for (final Map.Entry<String, JsonElement> entry : root.getAsJsonObject().entrySet())
             {
                 final String key = entry.getKey();
                 // Skip recipes and metadata
@@ -405,19 +753,16 @@ public final class PlayerStatsService
 
     private static UUID resolvePlayerUuid(final MinecraftServer server, final String targetName)
     {
-        // Check online players
         final ServerPlayer online = server.getPlayerList().getPlayerByName(targetName);
         if (online != null)
         {
             return online.getUUID();
         }
-        // Check usercache
         final Optional<GameProfile> cached = server.getProfileCache().get(targetName);
         if (cached.isPresent())
         {
             return cached.get().getId();
         }
-        // Check stats directory matches
         final Path statsDir = server.getWorldPath(LevelResource.PLAYER_STATS_DIR);
         if (Files.isDirectory(statsDir))
         {
@@ -425,24 +770,20 @@ public final class PlayerStatsService
             {
                 for (final Path path : stream.filter(p -> p.getFileName().toString().endsWith(".json")).toList())
                 {
-                    final String fileName = path.getFileName().toString();
-                    final String uuidStr = fileName.substring(0, fileName.length() - 5);
-                    try
+                    final UUID uuid = uuidFromFileName(path.getFileName().toString());
+                    if (uuid == null)
                     {
-                        final UUID uuid = UUID.fromString(uuidStr);
-                        final String name = resolvePlayerName(server, uuid, null);
-                        if (targetName.equalsIgnoreCase(name))
-                        {
-                            return uuid;
-                        }
+                        continue;
                     }
-                    catch (final IllegalArgumentException ignored)
+                    if (targetName.equalsIgnoreCase(resolvePlayerName(server, uuid, null)))
                     {
+                        return uuid;
                     }
                 }
             }
-            catch (final Exception ignored)
+            catch (final Exception e)
             {
+                LOGGER.warn("Could not scan the stats directory for '{}': {}", targetName, e.getMessage());
             }
         }
         return null;
